<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/navigation_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_weight="1"
                    android:fontFamily="@font/amadeus_ap"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_header_large"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/night_btn"
                    style="@style/MenuImageView"
                    android:src="@drawable/ic_mode_night" />
            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:id="@+id/textView"
        style="@style/HeaderSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        app:layout_constraintBottom_toTopOf="@+id/ad_card_view"
        app:layout_constraintEnd_toEndOf="@+id/ad_card_view"
        app:layout_constraintStart_toStartOf="@+id/ad_card_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ad_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin.56"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardCornerRadius="@dimen/radius16"
        app:cardElevation="@dimen/elevation_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test"
                android:scaleType="centerCrop"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        style="@style/HeaderSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/beautiful"
        app:layout_constraintBottom_toTopOf="@+id/beautiful_card_view"
        app:layout_constraintEnd_toEndOf="@+id/beautiful_card_view"
        app:layout_constraintStart_toStartOf="@+id/beautiful_card_view" />


    <androidx.cardview.widget.CardView
        android:id="@+id/beautiful_card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardCornerRadius="@dimen/radius16"
        app:cardElevation="@dimen/elevation_normal"
        app:layout_constraintBottom_toTopOf="@+id/photo_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ad_card_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/test"
                android:scaleType="centerCrop"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/collage_card_view"
        style="@style/SimpleCardView"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/item_card_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_ripple"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_collage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/collage"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/photo_card_view"
        style="@style/SimpleCardView"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/item_card_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/item_ripple"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/photo"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <!--
        <ImageView
            android:id="@+id/themeSwitchImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    -->

</androidx.constraintlayout.widget.ConstraintLayout>